2010-02-15  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc src/gadgets.h src/graphics.c src/save.c
	src/set.c src/show.c: New style option (candlesticks or
	financebars) for 'with boxplots'. Apply the current setting of
	'set bars' to boxplots drawn in candlestick style.

2010-02-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_obj): Sanity check start and end angles of arc.

2010-02-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_boxes): Amazingly old bug that fails to apply 
	absolute boxwidth in the case where previous point was undefined.

2010-02-10  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff:
	Sync Japanese documentation to gnuplot.doc rev 1.598

2010-02-07  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Clarify the documentation for xticlabels().
	* docs/Makefile.in: Use htlatex to generate html docs

2010-02-07  Christoph Junghans (ottxor)

	* configure.in share/Makefile.am src/Makefile.am src/gplt_x11.c
	src/variable.c: Configurable X11 application resource path.
	Bug #2931287 #219323

2010-02-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boxplot_range_fiddling) src/plot2d.c (plot_boxplot):
	Make boxplot handling ignore any undefined points in the data set.

2010-02-06  Ethan A Merritt  <merritt@u.washington.edu>

	* NEWS docs/gnuplot.doc src/save.c src/set.c src/show.c src/tables.c
	src/tables.h src/term_api.h src/unset.c src/variable.c term/post.trm:

	Revise the search order for PostScript prologue files
	1) directory given by 'set psdir' [new command]
	2) directory given by environmental variable GNUPLOT_PS_DIR
	3) built-in header if present, otherwise default system directory
	4) loadpath [pretty useless, but that's what it did before]

2010-02-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_boxplot): Fix off-by-one error in calculating
	quartile boundaries.
